[SECURITY] Fix CSRF in spamRegexList#deleteFromList by adding token checks
Bug: T217871
Change-Id: I1f9dd67af124dbc7c4b392db96b699abfa3eb835

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -22,6 +22,7 @@
 	"spamregex-no-currently-blocked": "'''There are no blocked phrases.'''",
 	"spamregex-log": "* <code>$1</code> $2 ([{{SERVER}}$3&text=$4 remove]) added by $5 on $6 at $7 (reason: $8)",
 	"spamregex-page-title-1": "Block phrase using regular expressions",
+	"spamregex-unblock-form-text": "Phrase to unblock:",
 	"spamregex-unblock-success": "Unblock succedeed",
 	"spamregex-unblock-message": "Phrase '''$1''' has been unblocked from editing.",
 	"spamregex-page-title-2": "Block phrases from saving using regular expressions",
