--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -24,9 +24,10 @@
 	"spamregex-move": "Currently unused",
 	"spamregex-no-currently-blocked": "Used as hint for a empty list",
 	"spamregex-log": "Parameters:\n* $1 is spam text\n* $2 is a description\n* $3 is an unblock link\n* $4 is the IP address to be unblocked\n* $5 is a username\n* $6 is a date\n* $7 is a time",
-	"spamregex-page-title-1": "Used as page title on Special:SpamRegexList",
-	"spamregex-unblock-success": "Used as sub title on Special:SpamRegexList",
-	"spamregex-unblock-message": "Used as text on Special:SpamRegexList",
+	"spamregex-page-title-1": "Used as page title on Special:SpamRegex",
+	"spamregex-unblock-form-text": "Shown on Special:SpamRegex when a privileged user clicks on the \"remove\" link and they don't have JavaScript enabled; upon clicking the link they will then be redirected to a form which allows them to unblock the desired phrase.",
+	"spamregex-unblock-success": "Used as sub title on Special:SpamRegex",
+	"spamregex-unblock-message": "Used as text on Special:SpamRegex",
 	"spamregex-page-title-2": "Used as page title on form for blocking phrases",
 	"spamregex-block-success": "Used as sub title on form for blocking phrases",
 	"spamregex-block-message": "Used as text on form for blocking phrases",
